# src/main/java/org/siri_hate/chat_service/model/mapper/ChatMemberMapper.java
@@ -6,6 +6,7 @@ import org.siri_hate.chat_service.model.entity.ChatMember;
 import org.siri_hate.chat_service.model.enums.ChatRole;
 import org.siri_hate.main_service.dto.ChatMemberPageResponseDTO;
 import org.siri_hate.main_service.dto.ChatMemberRequestDTO;
+import org.siri_hate.main_service.dto.ChatMemberResponseDTO;
 import org.siri_hate.main_service.dto.MemberChatRoleDTO;
 import org.springframework.data.domain.Page;
 
@@ -16,6 +17,11 @@ import java.util.List;
         unmappedTargetPolicy = ReportingPolicy.IGNORE
 )
 public interface ChatMemberMapper {
+
+    @Mapping(target = "username", source = "user.username")
+    ChatMemberResponseDTO toMemberResponseDTO(ChatMember chatMember);
+
     ChatMemberPageResponseDTO toMemberPageResponse(Page<ChatMember> members);
+
     ChatRole toChatRole(MemberChatRoleDTO memberChatRoleDTO);
 }
